

cmake_minimum_required(VERSION 2.6)
set (CMAKE_CXX_STANDARD 11)
project(multifrailty)
set(CMAKE_BUILD_TYPE RELEASE)

add_library (multif STATIC multifrailty.cpp)
add_executable(multifrailty main.cpp)
add_executable(tdeath main_tdeath.cpp)
add_executable(recover_time main_check_recover_time.cpp)
add_executable(critical_attack main_get_critical_attack.cpp)
add_executable(mf_detailed main_detailed_output.cpp)
add_executable(separate_combined main_separate_combined_attack.cpp)
target_link_libraries(multifrailty multif )
target_link_libraries(tdeath multif )
target_link_libraries(mf_detailed multif)
target_link_libraries(recover_time multif)
target_link_libraries(critical_attack multif)
target_link_libraries(separate_combined multif)
set_target_properties(multifrailty PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE /home/micha/bin )
set_target_properties(mf_detailed PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE /home/micha/bin )
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY /home/micha/postdoc/multifrailty-viewer/)
install(TARGETS multifrailty RUNTIME DESTINATION /home/micha/bin)
